# CodingAgent

./: README.md  pyproject.toml
notebooks/: Rough.ipynb
src/swe/: main.py
src/swe/core/: builder.py  prompt.py
src/swe/core/tools/: file_tool.py  shell_tool.py
src/swi/: main.py
src/swi/core/: builder.py  prompt.py
src/swi/core/tools/: fetch_tool.py  file_tool.py  shell_tool.py
src/swi/utils/: config.py  helper.py  model.py
